# README-Auditor

./: .coverage  .gitignore  README.md  auditor.example.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: install-dev.sh
src/readme_auditor/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py  parser.py
src/readme_auditor/formatters/: __init__.py  human.py  json.py
src/readme_auditor/rules/: __init__.py  _utils.py  assumed_knowledge.py  base.py  link_only_setup.py  missing_limitations.py  missing_sections.py  no_examples.py  no_troubleshooting.py  overpromising.py  unclear_audience.py  unfalsifiable.py  vague_claims.py
tests/: test_cli.py  test_config.py  test_config_more.py  test_cover_missing_lines.py  test_coverage_gaps.py  test_coverage_targeted.py  test_engine.py  test_engine_more.py  test_parser.py  test_parser_more.py  test_rules.py  test_rules_coverage.py  test_rules_more.py  test_utils.py
tests/fixtures/: good_readme.md  incomplete_readme.md  overpromising_readme.md  vague_readme.md
