[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "readme-auditor"
version = "0.1.0"
description = "Rule-based, explainable README quality auditor for GitHub projects."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "README-Auditor Contributors" }]
keywords = ["readme", "documentation", "lint", "auditor", "markdown", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Documentation",
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "markdown-it-py>=3.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/example/readme-auditor"
Issues = "https://github.com/example/readme-auditor/issues"

[project.scripts]
readme-auditor = "readme_auditor.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "types-tomli>=2.0.1.20240311; python_version < '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/readme_auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=readme_auditor --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true


[tool.coverage.run]
omit = [
  "src/readme_auditor/__main__.py",
]
